--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,11 @@ replay_pid*
 
 # Kotlin Gradle plugin data, see https://kotlinlang.org/docs/whatsnew20.html#new-directory-for-kotlin-data-in-gradle-projects
 .kotlin/
+/.idea/
+/.gradle/
+/.gradle/
+/build/libs/
+/build/tmp/
+/build/kotlin/
+/build/classes/
+/build/pitClasspath
